--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "clementinejs-fcc",
+  "name": "booktrade",
   "version": "1.0.1",
-  "description": "The elegant and lightweight boilerplate for full stack JavaScript.",
+  "description": "simple book trading club.",
   "main": "server.js",
   "repository": {
     "type": "git",
@@ -19,16 +19,18 @@
     "boilerplate"
   ],
   "scripts": {
-  "start": "node server.js"
+    "start": "node server.js"
   },
-  "author": "Blake Johnston",
-  "license": "MIT",
+  "author": "Hassan ben haj bouih",
+  "license": "ISC",
   "dependencies": {
     "dotenv": "^1.2.0",
+    "ejs": "^2.5.6",
     "express": "^4.12.4",
     "express-session": "^1.11.3",
     "mongoose": "^4.1.0",
     "passport": "^0.3.0",
-    "passport-github": "^1.0.0"
+    "passport-facebook": "^2.1.1",
+    "request": "^2.81.0"
   }
 }
