--- a/package.json
+++ b/package.json
@@ -5,18 +5,16 @@
   "main": "server.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/johnstonbl01/clementinejs-fcc"
+    "url": "git+https://github.com/Hassanbhb/VoteUp"
   },
-  "homepage": "http://www.clementinejs.com/",
-  "bugs": "https://github.com/johnstonbl01/clementinejs-fcc/issues",
+  "bugs": "https://github.com/Hassanbhb/VoteUp/issues",
   "keywords": [
     "MongoDB",
     "Mongoose",
     "full stack",
     "Express",
     "Node",
-    "javascript",
-    "boilerplate"
+    "javascript"
   ],
   "scripts": {
     "start": "node server.js"
